--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:id="@+id/mySimpleXYPlot"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:visibility="invisible"
         androidPlot.title="RSSI over time"
         androidPlot.domainLabel="Time"
         androidPlot.rangeLabel="RSSI"
@@ -48,7 +49,8 @@
         androidPlot.legendWidget.heightMetric.value="25dp"
         androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
         androidPlot.graphWidget.gridLinePaint.color="#000000"
-        android:layout_below="@+id/downloadButton"
         android:layout_alignParentStart="true" />
+
+
 
 </RelativeLayout>
