--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,36 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mainLayout"
+    android:background="#ffc1c1c1"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
-<!--
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start"
-        android:id="@+id/startButton"
-        android:onClick="startButtonClicked"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
 
 
-    <Button
-        android:layout_width="wrap_content"
+    <TextView
+        android:text="Null"
+        android:id="@+id/bleDeviceNameView"
+        android:transitionName="transition1"
+        android:textSize="17dp"
+        android:layout_marginLeft="72dp"
+        android:paddingBottom="25dp"
+        android:paddingTop="17dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Download"
-        android:id="@+id/downloadButton"
-        android:onClick="downloadButtonClicked"
-        android:layout_alignBottom="@+id/startButton"
-        android:layout_alignEnd="@+id/mySimpleXYPlot" />
--->
+        />
+
     <com.androidplot.xy.XYPlot
-        android:id="@+id/mySimpleXYPlot"
-        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:paddingBottom="160dp"
+        android:id="@+id/mySimpleXYPlot"
         android:visibility="invisible"
         androidPlot.title="RSSI over time"
         androidPlot.domainLabel="Time"
@@ -36,7 +39,7 @@
         androidPlot.domainLabelWidget.labelPaint.textSize="12dp"
         androidPlot.rangeLabelWidget.labelPaint.textSize="12dp"
         androidPlot.graphWidget.marginTop="20dp"
-        androidPlot.graphWidget.marginLeft="15dp"
+        androidPlot.graphWidget.marginLeft="22dp"
         androidPlot.graphWidget.marginBottom="25dp"
         androidPlot.graphWidget.marginRight="10dp"
         androidPlot.graphWidget.rangeLabelPaint.textSize="12dp"
@@ -47,10 +50,24 @@
         androidPlot.legendWidget.iconSizeMetrics.heightMetric.value="15dp"
         androidPlot.legendWidget.iconSizeMetrics.widthMetric.value="15dp"
         androidPlot.legendWidget.heightMetric.value="25dp"
-        androidPlot.legendWidget.positionMetrics.anchor="right_bottom"
-        androidPlot.graphWidget.gridLinePaint.color="#000000"
-        android:layout_alignParentStart="true" />
+        androidPlot.graphWidget.gridLinePaint.color="#000000" />
 
+</LinearLayout>
 
+    <android.support.design.widget.FloatingActionButton
+    app:borderWidth="0dp"
+    android:id="@+id/fab2"
+    android:transitionName="fabTrans"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:src="@drawable/ic_reload"
+    android:layout_gravity="top|start"
+    android:layout_marginLeft="18dp"
+    android:layout_marginTop="17dp"
+    app:backgroundTint="#ffd5d5d5"
+    app:elevation="6dp"
+    app:fabSize="normal"
+    app:rippleColor="@android:color/white"
+    app:pressedTranslationZ="12dp"/>
 
-</RelativeLayout>
+    </android.support.design.widget.CoordinatorLayout>
