--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,17 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
+        <!-- enable window content transitions -->
+        <item name="android:windowContentTransitions">true</item>
 
+        <!-- specify enter and exit transitions
+            <item name="android:windowEnterTransition">@transition/explode</item>
+            <item name="android:windowExitTransition">@transition/explode</item>
+        -->
+
+        <!-- enable overlapping of exiting and entering activities-->
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
+        <item name="android:windowAllowReturnTransitionOverlap">true</item>
 
     </style>
 
