--- a/app/src/main/res/menu/menu_select_bledevice.xml
+++ b/app/src/main/res/menu/menu_select_bledevice.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="edu.teco.blerssistrengthtest.SelectBLEDeviceActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+        android:icon="@drawable/ic_screen"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
